--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -6,6 +6,7 @@
 
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/moment.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/tempusdominus-bootstrap-4.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/bootstrap-toggle.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/alertify.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/bootstrap-select.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/core.js"></script>
