--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -14,6 +14,9 @@
 	<!-- TEMPUS DOMINUS DATETIME PICKER -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/tempusdominus-bootstrap-4.min.css" />
 
+	<!-- bootstrap toggle -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-toggle.min.css" >
+
 	<!-- ALERTIFY -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css"/>
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css"/>
