--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -18,34 +18,68 @@
                     <!-- START : ATTENDANCE FILTER -->
                     <div class="attendancefilter">
                     
-                        <form name="form-mark-attendance">
+                        <form name="form-mark-attendance" method="post">
 
                             <div class="form-row">
 
-                                <div class="form-group col-md-2">
-                                    <label for="addno">ID Number</label>
-                                    <input type="number" class="form-control" id="addno"/>
+                                <div class="col-md-6">
+                                    <div class="form-row">
+
+                                        <div class="form-group col-sm-3 mr-2">
+                                            <label for="addno">ID Number</label>
+                                            {% if form.field.addno %}
+                                            <input type="number" class="form-control" name="addno" value="{{ form.field.addno }}"/>
+                                            {% else %}
+                                            <input type="number" class="form-control" name="addno"/>
+                                            {% endif %}
+                                        </div>
+
+                                        <div class="form-group col-sm-6">
+                                            <label for="name">Name</label>
+                                            {% if form.field.name %}
+                                                <input type="text" class="form-control" name="name" value="{{ form.field.name }}"/>
+                                            {% else %}
+                                                <input type="text" class="form-control" name="name"/>
+                                            {% endif %}
+                                        </div>
+
+                                    </div>
                                 </div>
 
-                                <div class="form-group col-md-3">
-                                    <label for="name">Name</label>
-                                    <input type="text" class="form-control" id="name"/>
-                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-row pull-right">
 
-                                <div class="form-group col-md-1 ml-auto">
-                                    <label for="view">Select View</label>
-                                    <select class="form-control" id="view">
-                                        <option> - Select - </option>
-                                        <option value="Staff"> Staff </option>
-                                            {% for class in student_class %}
-                                            <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
-                                            {% endfor %}
-                                    </select>
-                                </div>
+                                        <div class="form-check form-check-inline mr-3">
+                                            <label class="form-check-label" for="name">Staff</label>
+                                            <input class="form-check-input" id="inpt-toggle-staff" type="checkbox" name="isStaff" data-toggle="toggle" data-style="ios" data-on="Yes" data-off="No" {{ (form.field.isStaff) ? 'checked' : '' }} />
+                                        </div>
 
-                                <div class="form-group">
-                                    <label for="date">Select Date</label>
-                                    <input type="date" class="form-control" id="date"/>
+                                        <div class="form-group mr-3">
+                                            <label for="class">Class</label>
+                                            <select class="form-control" id="input-select-class" name="class" required>
+                                                {% if search.query.class %}
+                                                    {% for class in student_class %}
+                                                        <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                    {% endfor %}
+                                                {% else %}
+                                                    {% for class in student_class %}
+                                                        <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                    {% endfor %}
+                                                {% endif %}
+                                                
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="date">Select Date</label>
+                                            {% if form.field.date %}
+                                                <input type="date" class="form-control" name="date" value="{{ form.field.date }}" required/>
+                                            {% else %}
+                                                <input type="date" class="form-control" name="date" required/>
+                                            {% endif %}
+                                        </div>
+
+                                    </div>
                                 </div>
 
                             </div>
@@ -67,22 +101,46 @@
 
                             <thead class="thead-dark">
                                 <tr>
-                                    <th scope="col">Index No</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Gender</th>
-                                    <th scope="col">Status</th>
+                                    <th width="10%" class="text-center" scope="col">Admission No</th>
+                                    <th width="10%" class="text-center" scope="col">Index No</th>
+                                    <th width="10%" class="text-center" scope="col">Gender</th>
+                                    <th class="text-center" scope="col">Name</th>
+                                    <th width="20%" class="text-center" scope="col">Status</th>
                                 </tr>
                             </thead>
 
                             <tbody>
-                                <tr>
-                                    <th class="text-center" scope="row">1 </th>
-                                    <td class="text-center"> S A L SAMARAKKODY</td>
-                                    <td class="text-center"> 01 12 2018</td>
-                                    <td class="text-center">
-                                        <input type="checkbox" data-toggle="toggle"/>
-                                    </td>
-                                </tr>
+                                {% if search.students %}
+                                    {% for student in search.students %}
+                                        <tr>
+                                            <th class="text-center" scope="row">{{ student.admission_no }}</th>
+                                            <td class="text-center">{{ student.index }}</td>
+                                            <td class="text-center">{{ student.gender }}</td>
+                                            <td class="text-center">{{ student.initials }} {{ student.surname }}</td>
+                                            <td class="text-center">
+                                                <input type="checkbox" class="test" name="status" data-stuid="{{ student.id }}" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning"/>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+
+                                {% elseif search.staff %}
+                                    {% for staff in search.staff %}
+                                    <tr>
+                                        <th class="text-center" scope="row">{{ staff.admission_no }}</th>
+                                        <td class="text-center">{{ staff.index }}</td>
+                                        <td class="text-center">{{ staff.gender }}</td>
+                                        <td class="text-center">{{ staff.initials }}{{ staff.surname }}</td>
+                                        <td class="text-center">
+                                            <input type="checkbox" class="test" name="status" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning"/>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+
+                                {% else %}
+                                    <tr>
+                                        <td colspan="5" class="text-center" scope="row">No records to display </td>
+                                    </tr>
+                                {% endif %}
                             </tbody>
 
                         </table>
@@ -95,7 +153,22 @@
         </div>
     </div>
 
-{{ template.footer|raw }}
+    {{ template.footer|raw }}
 
+
+    <script>
+    $("input:checkbox.test").change(function () {
+        console.log( $(this).data('stuid') )
+    })
+
+    $("input:checkbox#inpt-toggle-staff").change(function () {
+        if ( $(this).prop('checked') ) {
+            $("#input-select-class").prop('disabled', true);
+        } else {
+            $("#input-select-class").prop('disabled', false);
+        }
+    })
+    </script>
 
 </body>
+</html>
