fix staff toggle behaviour affection on class selector

--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -56,7 +56,7 @@
 
                                         <div class="form-group mr-3">
                                             <label for="class">Class</label>
-                                            <select class="form-control" id="input-select-class" name="class" required>
+                                            <select class="form-control" id="input-select-class" name="class" required {{ (form.field.isStaff) ? 'disabled' : '' }}>
                                                 {% if search.query.class %}
                                                     {% for class in student_class %}
                                                         <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
@@ -135,7 +135,6 @@
                                         </td>
                                     </tr>
                                     {% endfor %}
-
                                 {% else %}
                                     <tr>
                                         <td colspan="5" class="text-center" scope="row">No records to display </td>
