Attendance/mark is over

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -4,7 +4,9 @@
         <div class="col-md-12 logo pt-5">
             <img src="{{ app.url }}/themes/{{ app.theme }}/assets/img/profile-pic.jpg" width="100px" height="100px" class="rounded-circle img-thumbnail"/>
             <div class="sidenavusername mt-3">John Doe</div>
-            <hr class="sidenavuserhr"/>
+
+            <hr class="hrsidenav mx-auto"/>
+
         </div>
 
         <div class="col-md-12">
