--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -28,9 +28,9 @@
                                         <div class="form-group col-sm-3 mr-2">
                                             <label for="addno">ID Number</label>
                                             {% if form.field.addno %}
-                                            <input type="number" class="form-control" name="addno" value="{{ form.field.addno }}"/>
+                                                <input type="number" class="form-control" name="addno" value="{{ form.field.addno }}"/>
                                             {% else %}
-                                            <input type="number" class="form-control" name="addno"/>
+                                                <input type="number" class="form-control" name="addno"/>
                                             {% endif %}
                                         </div>
 
@@ -48,27 +48,31 @@
 
                                 <div class="col-md-6">
                                     <div class="form-row pull-right">
-
-                                        <div class="form-check form-check-inline mr-3">
-                                            <label class="form-check-label" for="name">Staff</label>
-                                            <input class="form-check-input" id="inpt-toggle-staff" type="checkbox" name="isStaff" data-toggle="toggle" data-style="ios" data-on="Yes" data-off="No" {{ (form.field.isStaff) ? 'checked' : '' }} />
+                                        
+                                        <div class="form-group col-sm-3">
+                                            <label for="view-type">Select Type</label>
+                                            <input id="inpt-toggle-staff" type="checkbox" name="isStaff" data-toggle="toggle" data-on="Staff" data-off="Student" data-onstyle="dark" data-offstyle="dark" {{ (form.field.isStaff) ? 'checked' : '' }} />
                                         </div>
 
-                                        <div class="form-group mr-3">
+                                        <div class="form-group col-sm-3">
                                             <label for="class">Class</label>
-                                            <select class="form-control" id="input-select-class" name="class" required {{ (form.field.isStaff) ? 'disabled' : '' }}>
+                                            <select class="form-control" id="input-select-class" name="class" {{ (form.field.isStaff) ? 'disabled' : '' }}>
                                                 {% for class in student_class %}
-                                                    <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                    {% if class.id == form.field.class %}
+                                                        <option selected value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                    {% else %}
+                                                        <option value="{{ class.id }}"> {{ class.grade.name }} - {{ class.name }} </option>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </select>
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group col-sm-6">
                                             <label for="date">Select Date</label>
                                             {% if form.field.date %}
-                                                <input type="date" class="form-control" name="date" value="{{ form.field.date }}" required/>
+                                                <input type="date" class="form-control" name="date" value="{{ form.field.date }}" min="{{ exam_min_date }}" max="{{ exam_max_date }}" required/>
                                             {% else %}
-                                                <input type="date" class="form-control" name="date" required/>
+                                                <input type="date" class="form-control" name="date" min="{{ exam_min_date }}" max="{{ exam_max_date }}" required/>
                                             {% endif %}
                                         </div>
 
@@ -94,11 +98,25 @@
 
                             <thead class="thead-dark">
                                 <tr>
-                                    <th width="10%" class="text-center" scope="col">Admission No</th>
-                                    <th width="10%" class="text-center" scope="col">Index No</th>
-                                    <th width="10%" class="text-center" scope="col">Gender</th>
-                                    <th class="text-center" scope="col">Name</th>
-                                    <th width="20%" class="text-center" scope="col">Status</th>
+                                    {% if search.students %}
+
+                                        <th width="10%" class="text-center" scope="col">Admission No</th>
+                                        <th width="10%" class="text-center" scope="col">Index No</th>
+                                        <th width="10%" class="text-center" scope="col">Gender</th>
+                                        <th class="text-center" scope="col">Name</th>
+                                        <th width="20%" class="text-center" scope="col">Status</th>
+
+                                    {% elseif search.staff %}
+
+                                        <th width="10%" class="text-center" scope="col">Staff ID</th>
+                                        <th width="10%" class="text-center" scope="col">Gender</th>
+                                        <th width="20%" class="text-center" scope="col">Class in Charge</th>
+                                        <th class="text-center" scope="col">Name</th>
+                                        <th width="20%" class="text-center" scope="col">Status</th>
+
+                                    {% else %}
+                                        <th class="text-center" scope="col">Select a View mode and a Date to mark attendance</th>
+                                    {% endif %}
                                 </tr>
                             </thead>
 
@@ -111,22 +129,21 @@
                                             <td class="text-center">{{ student.gender }}</td>
                                             <td class="text-center">{{ student.initials }} {{ student.surname }}</td>
                                             <td class="text-center">
-                                                <input type="checkbox" class="test" name="status" data-stuid="{{ student.id }}" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning"/>
+                                                <input type="checkbox" class="status" name="status" data-stuid="{{ student.id }}" data-date="{{ student.date }}" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning" {{ (student.status == 'Present') ? 'checked' : '' }}/>
                                             </td>
                                         </tr>
                                     {% endfor %}
-
                                 {% elseif search.staff %}
                                     {% for staff in search.staff %}
-                                    <tr>
-                                        <th class="text-center" scope="row">{{ staff.admission_no }}</th>
-                                        <td class="text-center">{{ staff.index }}</td>
-                                        <td class="text-center">{{ staff.gender }}</td>
-                                        <td class="text-center">{{ staff.initials }}{{ staff.surname }}</td>
-                                        <td class="text-center">
-                                            <input type="checkbox" class="test" name="status" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning"/>
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <th class="text-center" scope="row">{{ staff.employee_number }}</th>
+                                            <td class="text-center">{{ staff.gender }}</td>
+                                            <td class="text-center">{{ staff.cic }}</td>
+                                            <td class="text-center">{{ staff.initials }} {{ staff.surname }}</td>
+                                            <td class="text-center">
+                                                <input type="checkbox" class="status" name="status" data-staffid="{{ staff.id }}" data-date="{{ staff.date }}" data-toggle="toggle" data-style="ios" data-on="Present" data-off="Absent" data-onstyle="success" data-offstyle="warning" {{ (staff.status == 'Present') ? 'checked' : '' }}/>
+                                            </td>
+                                        </tr>
                                     {% endfor %}
                                 {% else %}
                                     <tr>
@@ -149,8 +166,56 @@
 
 
     <script>
-    $("input:checkbox.test").change(function () {
-        console.log( $(this).data('stuid') )
+    $("input:checkbox.status").change(function () {
+
+        // CHECK VIEW TYPE 
+        if ( $(this).data('stuid') ){
+
+            // STUDENT DATA APPEND
+            var formData = new FormData()
+            formData.append('student_id', $(this).data('stuid'));
+            formData.append('date', $(this).data('date'));
+
+            $.ajax({
+                url: "{{ app.url }}/attendance/ajax_mark",
+                method: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                dataType: 'json',
+                success: (res) => {              
+                    console.log("res : " + res)
+                },
+                error: (e) => {
+                    console.log(e.responseText)
+                }
+            })
+        }
+
+        else {
+
+            // STAFF DATA APPEND
+            var formData = new FormData()
+            formData.append('staff_id', $(this).data('staffid'));
+            formData.append('student_id', "NULL");
+            formData.append('date', $(this).data('date'));
+
+            $.ajax({
+                url: "{{ app.url }}/attendance/ajax_mark",
+                method: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                dataType: 'json',
+                success: (res) => {              
+                    console.log("res : " + res)
+                },
+                error: (e) => {
+                    console.log(e.responseText)
+                }
+            })
+
+        }
     })
 
     $("input:checkbox#inpt-toggle-staff").change(function () {
