--- a/themes/default/parents/add.html
+++ b/themes/default/parents/add.html
@@ -95,14 +95,14 @@
 
                             <thead class="thead-dark">
                                 <tr>
-                                    <th scope="col">Admission</th>
-                                    <th scope="col">Class</th>
-                                    <th scope="col">Index</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Gender</th>
-                                    <th scope="col">DOB</th>
-                                    <th scope="col">Address</th>
-                                    <th scope="col">City</th>
+                                    <th width="5%" class="text-center" scope="col">Admission</th>
+                                    <th width="5%" class="text-center" scope="col">Class</th>
+                                    <th width="5%" class="text-center" scope="col">Index</th>
+                                    <th class="text-center" scope="col">Name</th>
+                                    <th width="5%" class="text-center" scope="col">Gender</th>
+                                    <th class="text-center" scope="col">DOB</th>
+                                    <th class="text-center" scope="col">Address</th>
+                                    <th class="text-center" scope="col">City</th>
                                     <th> &nbsp; </th>
                                     
                                 </tr>
@@ -115,10 +115,10 @@
                                         <th class="text-center" scope="row">{{ student.admission_no }}</th>
                                         <td class="text-center">{{ student.class }}</td>
                                         <td class="text-center">{{ student.index }}</td>
-                                        <td>{{ student.name }}</td>
-                                        <td  class="text-center">{{ student.gender }}</td>
-                                        <td>{{ student.dob }}</td>
-                                        <td>{{ student.address }}</td>
+                                        <td class="text-center">{{ student.name }}</td>
+                                        <td class="text-center">{{ student.gender }}</td>
+                                        <td class="text-center">{{ student.dob }}</td>
+                                        <td class="text-center">{{ student.address }}</td>
                                         <td class="text-center">{{ student.city }}</td>
                                         <td class="text-center" width="8%">
                                             {% if student.disabled %}
