made layout wide width

--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -11,7 +11,7 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="container attendancemark">
+                <div class="attendancemark">
 
                     <h4 class="page-title">Mark Attendance</h4>
 
