--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -15,7 +15,7 @@
                 <!-- END : BUTTON TRIGGER MODAL -->
 
                 <!-- START : EXAM CREATE PAGE -->
-                <div class="container examcreate">
+                <div class="examcreate">
 
                     <!-- START : ADD EXAM -->
                     <div class="addexam">
