--- a/themes/default/parents/add.html
+++ b/themes/default/parents/add.html
@@ -11,7 +11,7 @@
 
                 {{ template.topmenu|raw }}
 
-                <div class="container parentadd">
+                <div class="parentadd">
 
                     <h4 class="page-title"> Add Parent Details </h4>
 
