added header to card

--- a/themes/default/attendance/search.html
+++ b/themes/default/attendance/search.html
@@ -19,6 +19,9 @@
                         <h4 class="page-title"> View Attendance</h4>
 
                         <div class="card mt-4">
+                            <div class="card-header">
+                                Search Staff/Student
+                            </div>
                             <div class="card-body">
                                 <form name="formviewattendance" method="post">
 
