added page title and card header

--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -11,11 +11,13 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="container stusearch">
+                <div class="stusearch">
 
-                    <div class="card">
+                    <h4 class="page-title">View Student</h4>
+
+                    <div class="card mt-4">
                         <div class="card-header">
-                            Search Student
+                            Search
                         </div>
                         <div class="card-body">
                             <form method="post">
