--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -16,7 +16,10 @@
                     <h4 class="page-title">Mark Attendance</h4>
 
                     <!-- START : ATTENDANCE FILTER -->
-                    <div class="attendancefilter card mt-4">
+                    <div class="attendancefilter card mt-4 pt-0">
+                        <div class="card-header">
+                            Search Student or Staff
+                        </div>
                         <div class="card-body">
                     
                             <form name="form-mark-attendance" method="post">
