--- a/themes/default/result/add.html
+++ b/themes/default/result/add.html
@@ -10,7 +10,7 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="container resultadd">
+                <div class="resultadd">
 
                     <h4 class="page-title"> Add / Edit Exam Result </h4>
 
