--- a/themes/default/staff/add.html
+++ b/themes/default/staff/add.html
@@ -11,7 +11,7 @@
 
                 {{ template.topmenu|raw }}
 
-                <div class="container staffadd">
+                <div class="staffadd">
 
                     <form name="empadmission" method="POST" action="#">
                         <div id="accordionAdmission">
