--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -11,7 +11,7 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="container staffsearch">
+                <div class="staffsearch">
 
                     <div class="card">
                         <div class="card-header">Search Staff</div>
