in-site ref in sidenav

--- a/themes/default/backup/index.html
+++ b/themes/default/backup/index.html
@@ -10,9 +10,9 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="sportindex">
+                <div class="backupindex">
 
-                    <h4 class="page-title"> Sport Achievement </h4>
+                    <h4 class="page-title"> Backup </h4>
 
                 </div>
             </div>
