--- a/themes/default/report/index.html
+++ b/themes/default/report/index.html
@@ -10,8 +10,10 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="resultindex">
-                    <h4 class="page-title"> Result index </h4>
+                <div class="backupindex">
+
+                    <h4 class="page-title"> Report index </h4>
+
                 </div>
             </div>
         </div>
