--- a/themes/default/sport/search.html
+++ b/themes/default/sport/search.html
@@ -10,8 +10,10 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="resultindex">
-                    <h4 class="page-title"> Result index </h4>
+                <div class="sportsearch">
+
+                    <h4 class="page-title"> Sport Search </h4>
+
                 </div>
             </div>
         </div>
