exam/add modified - student has exam ref table data insertion

--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -467,7 +467,7 @@
                         })
                     } else {
                         console.log(res);
-                        alertify.alert(res.error);
+                        alertify.alert(res.message);
                     }
                 },
                 error: (e) => {
