timetable/create finished

--- a/themes/default/common/topmenu.html
+++ b/themes/default/common/topmenu.html
@@ -1,8 +1,8 @@
 <div class="row topmenu" style="display: flex; justify-content: space-between;align-items: center;height: auto;">
 
-    <div class="title">David De Silva College</div>
+    <div class="title">David De Silva College <br/> Minuwangoda</div>
 
-    <div class="time">Wedensday 12 June 2019 - 7:56 pm</div>
+    <div class="time">{{ date_now }} <br/> {{ time_now }}</div>
 
     <div>
 
