--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -26,7 +26,7 @@
                             <div class="">
                                 <button type="button" class="btn btn-sm btn-warning ml-auto" data-toggle="modal" data-target="#edit-exam"> Edit / Remove exam </button>
                                 <button type="button" class="btn btn-sm btn-warning ml-2" data-toggle="modal" data-target="#view-exam-type"> Edit / Remove exam type </button>
-                                <button type="button" class="btn btn-sm btn-primary ml-2"  data-toggle="modal" data-target="#create-exam-type"> Add new exam type </button>
+                                <button type="button" class="btn btn-sm btn-secondary ml-2"  data-toggle="modal" data-target="#create-exam-type"> Add new exam type </button>
                             </div>
                         </div>
 
